Add test for `com.influxdb:influxdb3-java:1.0.0`